fixing spacing between lines in posts

--- a/react-login/frontend/src/skillswapper_components/homepage/MainFeed/ServicePost.module.css
+++ b/react-login/frontend/src/skillswapper_components/homepage/MainFeed/ServicePost.module.css
@@ -69,8 +69,12 @@
 
 .postContent {
   font-size: 18px;
-  /* margin-top: 17px; */
   width: 770px;
+}
+
+.contentLine {
+  margin: 0; 
+  line-height: 1.5;
 }
 
 @media (max-width: 991px) {
